force-app/main/default/objects/RSIM_Active_Entitlement__c/RSIM_Active_Entitlement__c.object-meta.xml
<CustomObject>
    <label>RSIM Active Entitlement</label>
    <nameField>
        <displayFormat>RS-{0000}</displayFormat>
        <label>RSIM Active Entitlement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RSIM Active Entitlements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>