force-app/main/default/objects/RSIM_Active_Entitlement__c/fields/Contracted_Extended_Services_Fee__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Extended_Services_Fee__c</fullName>
    <label>Contracted Extended Services Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>