force-app/main/default/objects/RSIM_Active_Entitlement__c/fields/Entitlement_Id__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_Id__c</fullName>
    <label>Entitlement Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>