force-app/main/default/objects/RSIM_Active_Entitlement__c/fields/Mcn__c.field-meta.xml
<CustomField>
    <fullName>Mcn__c</fullName>
    <label>Mcn</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>