force-app/main/default/objects/RSIM_Active_Entitlement__c/fields/Pricing_Contract__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Contract__c</fullName>
    <label>Pricing Contract</label>
    <length>80</length>
    <type>Text</type>
</CustomField>