force-app/main/default/objects/RSIM_Active_Entitlement__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <label>Site</label>
    <type>TextArea</type>
</CustomField>